@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.computation.local;
 
@@ -17,10 +18,9 @@ import java.nio.file.Path;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 public class LocalComputationConfig {
 
@@ -52,7 +52,7 @@ public class LocalComputationConfig {
                     if (paths.isEmpty()) {
                         throw new ConfigurationException("Empty tmp dir list");
                     }
-                    List<Path> checkedPaths = paths.stream().filter(Files::exists).collect(Collectors.toList());
+                    List<Path> checkedPaths = paths.stream().filter(Files::exists).toList();
                     if (checkedPaths.isEmpty()) {
                         throw new ConfigurationException("None of the tmp dir path of the list exist");
                     }
@@ -67,9 +67,8 @@ public class LocalComputationConfig {
         Path localDir = config.flatMap(c -> getTmpDir(c, "tmp-dir").or(() -> getTmpDir(c, "tmpDir")))
                 .orElse(getDefaultLocalDir(fileSystem));
         int availableCore = config.map(c -> c.getOptionalIntProperty("available-core")
-                .orElse(c.getOptionalIntProperty("availableCore").orElse(DEFAULT_AVAILABLE_CORE)))
+                        .orElse(c.getOptionalIntProperty("availableCore").orElse(DEFAULT_AVAILABLE_CORE)))
                 .orElse(DEFAULT_AVAILABLE_CORE);
-
         if (availableCore <= 0) {
             availableCore = Runtime.getRuntime().availableProcessors();
         }
