@@ -3,10 +3,11 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.iidm.network.tck;
 
-import com.powsybl.commons.test.AbstractConverterTest;
+import com.powsybl.commons.test.AbstractSerDeTest;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
 import com.powsybl.iidm.network.test.FictitiousSwitchFactory;
@@ -18,15 +19,15 @@ import java.io.InputStreamReader;
 import java.io.StringWriter;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
-public abstract class AbstractVoltageLevelExportTest extends AbstractConverterTest {
+public abstract class AbstractVoltageLevelExportTest extends AbstractSerDeTest {
 
     @Test
     public void nodeBreakerTest() throws IOException {
@@ -36,7 +37,7 @@ public abstract class AbstractVoltageLevelExportTest extends AbstractConverterTe
             writer.flush();
             // as Graphviz builder library do not have to stable export (order of nodes and edges can change at each run)
             // we only compare unsorted lines
-            List<String> linesRef = new BufferedReader(new InputStreamReader(getClass().getResourceAsStream("/fictitious-switch-c.dot"))).lines().collect(Collectors.toList());
+            List<String> linesRef = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/fictitious-switch-c.dot")))).lines().toList();
             List<String> lines = Arrays.asList(writer.toString().split("[\\r\\n]+"));
             assertTrue(lines.containsAll(linesRef));
         }
@@ -50,7 +51,7 @@ public abstract class AbstractVoltageLevelExportTest extends AbstractConverterTe
             writer.flush();
             // as Graphviz builder library do not have to stable export (order of nodes and edges can change at each run)
             // we only compare unsorted lines
-            List<String> linesRef = new BufferedReader(new InputStreamReader(getClass().getResourceAsStream("/eurostag-tutorial-example1-vlhv1.dot"))).lines().collect(Collectors.toList());
+            List<String> linesRef = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/eurostag-tutorial-example1-vlhv1.dot")))).lines().toList();
             List<String> lines = Arrays.asList(writer.toString().split("[\\r\\n]+"));
             assertTrue(lines.containsAll(linesRef));
         }
