@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.ucte.network;
 
@@ -10,12 +11,11 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * @author Mathieu Bague <mathieu.bague at rte-france.com>
+ * @author Mathieu Bague {@literal <mathieu.bague at rte-france.com>}
  */
 public class UcteNetworkImplTest {
 
@@ -41,7 +41,7 @@ public class UcteNetworkImplTest {
         assertEquals(0, network.getComments().size());
 
         assertEquals(3, network.getNodes().size());
-        List<UcteNodeCode> codes = network.getNodes().stream().map(UcteNode::getCode).collect(Collectors.toList());
+        List<UcteNodeCode> codes = network.getNodes().stream().map(UcteNode::getCode).toList();
         assertTrue(codes.containsAll(Arrays.asList(code1, code2, code3)));
         UcteNode node = network.getNode(code1);
         assertEquals(1000.0, node.getActivePowerGeneration(), 0.0);
